Исправлен запуск компиляции travisci

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 env:
-  - DOCKER_BUILD_DIR=/master-thesis IMAGE=docker-latex COMMAND="make build && make clean"
+  - DOCKER_BUILD_DIR=/master-thesis IMAGE=docker-latex COMMAND="bash -c 'make build && make clean'"
 
 script:
   - docker build -t $IMAGE .
