Добавлена презентация в проект

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ deploy:
   # https://github.com/settings/tokens
   # Add variable TOKEN in TravisCI settings
   api_key: $TOKEN
-  file: master-thesis.pdf
+  file: master-thesis-$(date +%d.%m.%Y_%R).pdf presentation/presentation.pdf
   skip-cleanup: true
