--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ deploy:
   # https://github.com/settings/tokens
   # Add variable TOKEN in TravisCI settings
   api_key: $TOKEN
-  file: master-thesis.pdf
-  file: presentation/presentation.pdf
+  file:
+    - "master-thesis.pdf"
+    - "presentation/presentation.pdf"
   name: Build $(date +'%d.%m.%Y %R')
   skip-cleanup: true
