--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,8 +12,8 @@ jobs:
     - name: Build
       run: |
         docker build -t docker-latex .
-        docker run --rm -i -v ${PWD}:/master-thesis:Z docker-latex bash -c "make build"
-        docker run --rm -i -v ${PWD}:/master-thesis:Z docker-latex bash -c "make -C presentation"
+        docker run --rm -i -v ${PWD}:/master-thesis:Z docker-latex bash -c "git submodule update --remote && latexmk -f -xelatex -synctex=1 -jobname=master-thesis main.tex"
+        docker run --rm -i -v ${PWD}:/master-thesis:Z docker-latex bash -c "latexmk -f -xelatex -synctex=1 -jobname=presentation presentation/main.tex"
 
     - name: Release
       uses: docker://softprops/action-gh-release
