--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build
       run: |
+        git submodule init
         git submodule update --remote
         docker build -t docker-latex .
         docker run --rm -i -v ${PWD}:/master-thesis:Z docker-latex bash -c "latexmk -xelatex -synctex=1 -jobname=master-thesis main.tex"
