--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,9 +17,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         DOCKER_REPO: "docker.pkg.github.com"
         IMAGE_NAME: "docker-latex"
-        IMAGE_TAG: $(date +'%d.%m.%Y %R')
+        IMAGE_TAG: `date +'%d.%m.%Y %R'`
       run: |
         echo "${IMAGE_TAG}"
+        exit 1
         # Pull submodules
         git submodule init
         git submodule update --remote
