--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,7 +5,9 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on:
+      - ubuntu-latest
+      - macOS-latest
 
     steps:
 
@@ -17,10 +19,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         DOCKER_REPO: "docker.pkg.github.com"
         IMAGE_NAME: "docker-latex"
-        IMAGE_TAG: `date +'%d.%m.%Y %R'`
+        IMAGE_TAG: "latest"
       run: |
-        echo "${IMAGE_TAG}"
-        exit 1
         # Pull submodules
         git submodule init
         git submodule update --remote
