--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,6 @@
 name: master-thesis
 
-on:
-  push:
-    branches:
-    - master
+on: [push]
 
 jobs:
   build:
@@ -39,6 +36,7 @@ jobs:
 
     - name: Create GitHub release with artifacts
       uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
           master-thesis.pdf
