--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,12 +12,6 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v2
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
     - name: Build docker image and push it to the registry
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -30,9 +24,7 @@ jobs:
         # Login to GitHub Packages and build Docker image
         docker login ghcr.io -u amet13 -p ${GITHUB_TOKEN}
         docker pull ${DOCKER_IMAGE_ORIGIN}:latest
-        docker buildx build \
-          --platform linux/arm/v7,linux/arm64/v8,linux/amd64 \
-          -t ${DOCKER_IMAGE_ORIGIN}:${GITHUB_REF_NAME} .
+        docker build -t ${DOCKER_IMAGE_ORIGIN}:${GITHUB_REF_NAME} .
 
         # Generate PDF artifacts
         docker run --rm -i -v ${PWD}:/master-thesis:Z ${DOCKER_IMAGE_ORIGIN}:${GITHUB_REF_NAME} \
