--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,16 +27,15 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GH_TOKEN }}
 
-    - name: Debug
-      run: |
-        echo ${DOCKER_IMAGE_ORIGIN}:${GITHUB_REF_NAME}
-
     - name: Build and push Docker image
       uses: docker/build-push-action@v3
       with:
         context: .
         push: true
-        tags: ${DOCKER_IMAGE_ORIGIN}:${GITHUB_REF_NAME},${DOCKER_IMAGE_ORIGIN}:latest
+        tags: ${{ env.DOCKER_IMAGE_ORIGIN }}:${{ env.GITHUB_REF_NAME }},${{ env.DOCKER_IMAGE_ORIGIN }}:latest
+        build-args: |
+          DOCKER_IMAGE_ORIGIN=${{ env.DOCKER_IMAGE_ORIGIN }}
+          GITHUB_REF_NAME=${{ env.GITHUB_REF_NAME }}
 
     - name: Generate PDFs
       uses: addnab/docker-run-action@v3
