--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,9 +5,6 @@ on:
     tags:
       - 1.*
 
-env:
-  DOCKER_IMAGE_ORIGIN: ghcr.io/amet13/master-thesis/docker-latex
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,10 +12,12 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v2
 
-    - name: Prepare submodules
+    - name: Prepare submodules and env vars
       run: |
         git submodule init
         git submodule update --remote
+        echo "DOCKER_IMAGE_ORIGIN=ghcr.io/amet13/master-thesis/docker-latex" >> $GITHUB_ENV
+        echo "GITHUB_REF_NAME=${GITHUB_REF_NAME}" >> $GITHUB_ENV
 
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
@@ -32,9 +31,10 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.DOCKER_IMAGE_ORIGIN }}:${GITHUB_REF_NAME},${{ env.DOCKER_IMAGE_ORIGIN }}:latest
+        tags: ${{ env.DOCKER_IMAGE_ORIGIN }}:${{ env.GITHUB_REF_NAME }},${{ env.DOCKER_IMAGE_ORIGIN }}:latest
         build-args: |
           DOCKER_IMAGE_ORIGIN=${{ env.DOCKER_IMAGE_ORIGIN }}
+          GITHUB_REF_NAME=${{ env.GITHUB_REF_NAME }}
 
     - name: Generate PDFs
       uses: addnab/docker-run-action@v3
