--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -16,32 +16,19 @@ jobs:
       run: |
         git submodule init
         git submodule update --remote
-        echo "DOCKER_IMAGE_ORIGIN=ghcr.io/amet13/master-thesis/docker-latex" >> $GITHUB_ENV
-        echo "GITHUB_REF_NAME=${GITHUB_REF_NAME}" >> $GITHUB_ENV
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GH_TOKEN }}
-
-    - name: Build and push Docker image
+    - name: Build Docker image
       uses: docker/build-push-action@v3
       with:
         context: .
-        push: true
+        push: false
         tags: |
-          ${{ env.DOCKER_IMAGE_ORIGIN }}:${{ env.GITHUB_REF_NAME }}
-          ${{ env.DOCKER_IMAGE_ORIGIN }}:latest
-        build-args: |
-          DOCKER_IMAGE_ORIGIN=${{ env.DOCKER_IMAGE_ORIGIN }}
-          GITHUB_REF_NAME=${{ env.GITHUB_REF_NAME }}
+          master-thesis/docker-latex:latest
 
     - name: Generate PDFs
       uses: addnab/docker-run-action@v3
       with:
-        image: ${DOCKER_IMAGE_ORIGIN}:${GITHUB_REF_NAME}
+        image: master-thesis/docker-latex:latest
         options: -v ${PWD}:/master-thesis:Z
         run: |
           latexmk -xelatex -synctex=1 -jobname=master-thesis main.tex
