Use default GitHub token instead of custom one

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,4 +42,4 @@ jobs:
           master-thesis.pdf
           presentation/presentation.pdf
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
